[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "asyncstdlib"
author = "Max Fischer"
author-email = "maxfischer2781@gmail.com"
home-page = "https://github.com/maxfischer2781/asyncstdlib"
description-file = "README.rst"
keywords = "async enumerate itertools builtins functools contextlib"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
requires = ["typing_extensions"]

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=4.3.0",
    "flake8",
    "flake8-bugbear",
    "black; implementation_name=='cpython'",
]
doc = ["sphinx", "sphinxcontrib-contentui", "sphinxcontrib-trio"]

[tool.flit.metadata.urls]
Documentation = "https://asyncstdlib.readthedocs.io/en/latest/"
