[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "asyncstdlib"
author = "Max Fischer"
author-email = "maxfischer2781@gmail.com"
home-page = "https://github.com/maxfischer2781/asyncstdlib"
description-file = "README.rst"
keywords = "async enumerate itertools builtins functools contextlib"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = "~=3.6"
requires = ["typing_extensions; python_version<'3.8'"]

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "flake8",
    "flake8-bugbear",
    "black; implementation_name=='cpython'",
    "coverage",
    "pytest-cov",
    "flake8-2020",
    "mypy; implementation_name=='cpython'",
]
doc = ["sphinx", "sphinxcontrib-trio"]

[tool.flit.metadata.urls]
Documentation = "https://asyncstdlib.readthedocs.io/en/latest/"

[tool.mypy]
files = ["asyncstdlib/*.py"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
